# ErsatzTV

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  :wq  CHANGELOG.md  Directory.Build.props  Directory.Build.targets  Dockerfile  ErsatzTV.sln  ErsatzTV.sln.DotSettings  LICENSE  README.md  docker-compose.yml  global.json  gon.json  mkdocs.yml  nuget.config
.config/: dotnet-tools.json
.github/: FUNDING.yml  dependabot.yml
ErsatzTV-Windows/: Cargo.toml  ErsatzTV-Windows.csproj  Program.cs  TrayApplicationContext.cs  build.rs  ersatztv_windows.rc
ErsatzTV-Windows/src/: main.rs
ErsatzTV.Application/: .editorconfig  EntityIdResult.cs  ErsatzTV.Application.csproj  ErsatzTV.Application.csproj.DotSettings  GlobalUsings.cs  IBackgroundServiceRequest.cs  IEmbyBackgroundServiceRequest.cs  IFFmpegWorkerRequest.cs  IJellyfinBackgroundServiceRequest.cs  IMediaCard.cs  IPlexBackgroundServiceRequest.cs  IScannerBackgroundServiceRequest.cs  ISearchBackgroundServiceRequest.cs  ISearchIndexBackgroundServiceRequest.cs  ISubtitleWorkerRequest.cs
ErsatzTV.CommandLine/: Config.cs  DesiredResolution.cs  ErsatzTV.CommandLine.csproj  Program.cs
ErsatzTV.Core/: .editorconfig  BaseError.cs  DebugBreak.cs  ErsatzTV.Core.csproj  ErsatzTV.Core.csproj.DotSettings  FileSystemLayout.cs  InMemoryLogService.cs  LanguageExtensions.cs  LoggingLevelSwitches.cs  PaginationOptions.cs  PathUtils.cs  Settings.cs  SystemEnvironment.cs  (+2 more)
ErsatzTV.Core.Nullable/: ErsatzTV.Core.Nullable.csproj
ErsatzTV.Core.Tests/: ErsatzTV.Core.Tests.csproj  PaginationOptionsTests.cs
(+5006 files in other folders)
